fixing layout issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,6 @@ body {
 	margin: 1em 1em;
 	color: white;
 	font-weight: bold;
-	height: 100%;
 }
 
 .control-button2 {
